<?xml version="1.0" encoding="utf-8"?>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.MainActivity"
        tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/toolbarTheme"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <fragment
            android:id="@+id/locationFragment"
            android:name="com.example.concordia_campus_guide.fragments.LocationFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_card_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/explore_bottom_card_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="false"
            app:behavior_peekHeight="70dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/explore_bottom_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_card_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="true"
            app:behavior_peekHeight="140dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/bottom_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/side_nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        tools:ignore="MissingConstraints"
        app:itemIconTint="@color/sideMenuItemColor"
        app:itemTextColor="@color/fadedBlack"/>


</androidx.drawerlayout.widget.DrawerLayout>
