<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.POIFragment">

    <LinearLayout
        android:id="@+id/poiLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_line_grey"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/point_of_interest_explore"
            android:textAllCaps="false"
            android:textColor="@color/colorAppTheme"
            android:textSize="20sp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/poiVp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteBackgroundColor"></androidx.viewpager2.widget.ViewPager2>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dotsTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"/>
    </LinearLayout>

</FrameLayout>